# timer

./: CMakeLists.txt  README.md
gui/: clock_widget.cpp  clock_widget.hpp  custom.hpp  event_widget.cpp  event_widget.hpp  event_widget.ui  label.cpp  label.hpp  main_window.cpp  main_window.hpp  main_window.ui  time_widget.cpp  time_widget.hpp  time_widget.ui  video_widget.cpp  video_widget.hpp  video_widget.ui
osc/: server.cpp  server.hpp
res/: resources.qrc
src/: clock.cpp  clock.hpp  main.cpp  range.hpp  time.hpp
